# kira

./: .gitignore  .prettierrc.json  404.html  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  architecture.md  changelog.md  clocks.html  crates.html  creating-sounds.html  index.html  installation.html  introduction.html  justfile  license.md  mixer.html  parameters.html  playing-sounds.html  print.html  readme.md  run-lua-test.cmd  searchindex.js  searchindex.json  thoughts.md  todo.md
conductor/: Cargo.toml
conductor-lua/: Cargo.toml
conductor-lua/src/: duration.rs  error.rs  event.rs  instance.rs  lib.rs  manager.rs  metronome.rs  parameter.rs  sequence.rs  sound.rs  tempo.rs  track.rs  tween.rs  value.rs
conductor/src/: backend.rs  command.rs  duration.rs  effect.rs  error.rs  event.rs  id.rs  instance.rs  lib.rs  manager.rs  metronome.rs  parameter.rs  parameters.rs  project.rs  sequence.rs  sound.rs  sound_bank.rs  stereo_sample.rs  tempo.rs  time.rs  tween.rs  value.rs
conductor/src/manager/: backend.rs  mod.rs
conductor/src/manager/backend/: instance.rs  instances.rs  looper.rs  metronome.rs  mixer.rs  mod.rs  parameters.rs  sequences.rs
conductor/src/sound/: id.rs  instance.rs  metadata.rs  mod.rs
conductor/src/track/: effect_slot.rs  id.rs  index.rs  mod.rs
conductor/src/track/effect/: mod.rs  svf.rs
crates/benchmarks/: Cargo.toml
crates/benchmarks/benches/: benchmarks.rs
crates/examples/doppler-effect/: Cargo.toml
crates/examples/doppler-effect/src/: main.rs
crates/examples/spatial-audio/: Cargo.toml
crates/examples/spatial-audio/src/: main.rs
crates/kira/: Cargo.toml
crates/kira-cpal/: Cargo.toml  readme.md
crates/kira-cpal/src/: desktop.rs  error.rs  lib.rs  renderer_wrapper.rs  stream_manager.rs  wasm.rs
crates/kira-cpal/src/desktop/: stream_manager.rs
crates/kira-cpal/src/stream_manager/: renderer_wrapper.rs
crates/kira-effects/: Cargo.toml
crates/kira-effects/src/: delay.rs  distortion.rs  filter.rs  handle.rs  lib.rs  reverb.rs
crates/kira-loaders/: Cargo.toml  changelog.md  readme.md
crates/kira-loaders/src/: error.rs  lib.rs  streaming.rs
crates/kira-loaders/src/streaming/: data.rs  decoder.rs  handle.rs  settings.rs  sound.rs
crates/kira/examples/: metronome.rs  reverb_send.rs  simple_sound_playback.rs
crates/kira/src/: arena.rs  backend.rs  clock.rs  clock_speed.rs  command.rs  dbfs.rs  decibels.rs  dsp.rs  effect.rs  error.rs  frame.rs  info.rs  lib.rs  listener.rs  manager.rs  math.rs  mix.rs  modulator.rs  output_destination.rs  panning.rs  parameter.rs  playback_rate.rs  playback_state_manager.rs  renderer.rs  resource.rs  resources.rs  semitones.rs  sound-old.rs  sound.rs  spatial.rs  start_time.rs  test_helpers.rs  track.rs  trigger.rs  tween.rs  util.rs  value.rs  volume.rs
crates/kira/src/arena/: controller.rs  iter.rs  slot.rs  test.rs
crates/kira/src/backend/: cpal.rs  mock.rs  renderer.rs  resources.rs
crates/kira/src/clock/: clock_info.rs  clock_speed.rs  clocks.rs  handle.rs  shared.rs  test.rs  time.rs
crates/kira/src/dsp/: frame.rs  resampler.rs  sample.rs
crates/kira/src/effect/: compressor.rs  delay.rs  distortion.rs  doppler.rs  eq_filter.rs  filter.rs  panning_control.rs  reverb.rs  volume_control.rs
crates/kira/src/info/: mock_info_builder.rs  single_frame_info.rs
crates/kira/src/listener/: handle.rs  provider.rs
crates/kira/src/manager/: backend.rs  command.rs  error.rs  renderer.rs  resources.rs  settings.rs
crates/kira/src/math/: quaternion.rs  vec3.rs
crates/kira/src/modulator/: lfo.rs  tweener.rs  value_provider.rs
crates/kira/src/parameter/: parameters.rs  test.rs  value.rs
crates/kira/src/resources/: clocks.rs  mixer.rs  modulators.rs  sounds.rs
crates/kira/src/sound/: common.rs  common_controller.rs  data.rs  error.rs  finite.rs  handle.rs  playback_position.rs  playback_rate.rs  settings.rs  sine.rs  spatial_scene.rs  static_sound.rs  streaming.rs  symphonia.rs  transport.rs  util.rs  wrapper.rs
crates/kira/src/sound-old/: streaming.rs
crates/kira/src/spatial/: emitter.rs  listener.rs  scene.rs
crates/kira/src/track/: builder.rs  effect.rs  error.rs  handle.rs  main.rs  (+8 more)
crates/kira/tests/: change_sample_rate.rs  streaming_sound_stops_on_error.rs  sync_send.rs  tick_accuracy.rs
examples/: Cargo.toml
examples/examples/: play_sound.rs
kira/: Cargo.toml
kira-benchmarks-old/: Cargo.toml
kira-benchmarks-old/benches/: instances.rs
kira-lua/: Cargo.toml
kira-lua/src/: duration.rs  error.rs  event.rs  instance.rs  lib.rs  manager.rs  metronome.rs  parameter.rs  sequence.rs  sound.rs  tempo.rs  track.rs  tween.rs  value.rs
kira/src/: audio_stream.rs  clock.rs  command.rs  dsp.rs  duration.rs  error.rs  event.rs  frame.rs  instance.rs  lib.rs  loop_behavior.rs  manager.rs  metronome.rs  mixer.rs  parameter.rs  playable.rs  resource.rs  sequence.rs  sound.rs  start_time.rs  stereo_sample.rs  tempo.rs  track.rs  util.rs  value.rs
kira/src/arrangement/: clip.rs  handle.rs  id.rs  mod.rs  settings.rs
kira/src/audio_stream/: handle.rs
kira/src/clock/: handle.rs  time.rs
kira/src/command/: mod.rs  producer.rs  sender.rs
kira/src/dsp/: sample.rs
kira/src/group/: groups.rs  handle.rs  mod.rs  set.rs
kira/src/instance/: handle.rs  mod.rs  settings.rs
kira/src/manager/: active_ids.rs  backend.rs  command.rs  error.rs  mod.rs  renderer.rs  resources.rs  tests.rs
kira/src/metronome/: handle.rs  metronomes.rs  mod.rs  settings.rs
kira/src/mixer/: effect.rs  effect_slot.rs  mod.rs  settings.rs  track.rs
kira/src/parameter/: handle.rs  mapping.rs  mod.rs  parameter.rs  parameters.rs  tween.rs
kira/src/playable/: mod.rs  playables.rs
kira/src/sequence/: error.rs  event_receiver.rs  handle.rs  instance.rs  mod.rs
kira/src/sound/: data.rs  error.rs  handle.rs  id.rs  instance.rs  metadata.rs  mod.rs  seamless_loop.rs  settings.rs  static_sound.rs  streaming.rs  wrapper.rs
kira/src/static_container/: index_map.rs  mod.rs
kira/src/track/: effect.rs  handle.rs  routes.rs  settings.rs
kira/src/value/: cached.rs
kira/tests/: instance.rs
(+432 files in other folders)
