[package]
name = "examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kira = { path = "../crates/kira" }
kira-cpal = { path = "../crates/kira-cpal" }
kira-loaders = { path = "../crates/kira-loaders" }
