[package]
name = "kira-benchmarks"
version = "0.1.0"
authors = ["Andrew Minnich <aminnich3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kira = {path = "../kira", features = ["benchmarking"]}

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "instances"
harness = false
