[package]
name = "kira"
version = "0.4.1"
authors = ["Andrew Minnich <aminnich3@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Dynamic audio library for games"
repository = "https://github.com/tesselode/kira"
keywords = ["gamedev", "audio", "music"]
categories = ["game-development", "multimedia::audio"]
readme = "../readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
benchmarking = []
mp3 = ["minimp3"]
ogg = ["lewton"]
flac = ["claxon"]
wav = ["hound"]
serde_support = ["serde", "indexmap/serde", "uuid/serde"]
default = ["mp3", "ogg", "flac", "wav"]

[dependencies]
atomic = "0.5.0"
basedrop = "0.1.0"
claxon = { version = "0.4.3", optional = true }
cpal = { version = "0.13.1", features = ["wasm-bindgen"] }
hound = { version = "3.4.0", optional = true }
indexmap = "1.6.1"
lewton = { version = "0.10.1", optional = true }
minimp3 = { version = "0.5.0", optional = true }
rand = "0.8.3"
ringbuf = "0.2.3"
serde = { version = "1.0.118", optional = true, features = ["derive"] }
thiserror = "1.0.23"

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
uuid = { version = "0.8.1", features = ["v4"] }

[target.'cfg(target_arch="wasm32")'.dependencies]
getrandom = { version = "0.2.2", features = ["js"] }
uuid = { version = "0.8.1", features = ["v4", "stdweb", "wasm-bindgen"] }
