[package]
name = "kira"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["mp3", "ogg", "flac", "wav"]
mp3 = ["minimp3"]
ogg = ["lewton"]
flac = ["claxon"]
wav = ["hound"]

[dependencies]
atomic-arena = { git = "https://github.com/tesselode/atomic-arena", rev = "4b467577" }
claxon = { version = "0.4.3", optional = true }
cpal = "0.13.3"
hound = { version = "3.4.0", optional = true }
lewton = { version = "0.10.1", optional = true }
minimp3 = { version = "0.5.0", optional = true }
ringbuf = "0.2.3"
thiserror = "1.0.23"
