[package]
name = "kira"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic-arena = { git = "https://github.com/tesselode/atomic-arena", rev = "4b467577" }
ringbuf = "0.2.3"
triple_buffer = "5.0.6"
