[package]
name = "benchmarks"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kira = { path = "../kira" }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benchmarks"
harness = false
