[package]
name = "kira-cpal"
version = "0.1.0-beta.0"
authors = ["Andrew Minnich <aminnich3@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Kira backend for desktop targets"
repository = "https://github.com/tesselode/kira"
keywords = ["gamedev", "audio", "music"]
categories = ["game-development", "multimedia::audio"]
readme = "readme.md"

[dependencies]
assert_no_alloc = { version = "1.1.2", optional = true }
cpal = "0.13.5"
kira = { path = "../kira", version = "0.6.0-beta.0" }
ringbuf = "0.2.3"
