[package]
name = "kira-effects"
version = "0.1.0-beta.0"
authors = ["Andrew Minnich <aminnich3@gmail.com>"]
edition = "2018"
license = "MIT or Apache-2.0"
description = "Basic effects for Kira"
repository = "https://github.com/tesselode/kira"
keywords = ["gamedev", "audio", "music"]
categories = ["game-development", "multimedia::audio"]

[dependencies]
kira = { path = "../kira" }
