[package]
name = "kira-loaders"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kira = { path = "../kira" }
ringbuf = "0.2.6"
symphonia = { version = "0.4.0", default-features = false }

[features]
default = ["mp3", "ogg", "flac", "wav"]
mp3 = ["symphonia/mp3"]
ogg = ["symphonia/ogg", "symphonia/vorbis"]
flac = ["symphonia/flac"]
wav = ["symphonia/wav", "symphonia/pcm"]
