[package]
name = "kira-loaders"
version = "0.1.0-beta.3"
authors = ["Andrew Minnich <aminnich3@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Audio file loading and streaming for Kira"
repository = "https://github.com/tesselode/kira"
keywords = ["gamedev", "audio", "music"]
categories = ["game-development", "multimedia::audio"]
readme = "readme.md"

[dependencies]
kira = { path = "../kira", version = "0.6.0-beta.2", default-features = false }
ringbuf = "0.2.6"
symphonia = { version = "0.4.0", default-features = false }

[features]
default = ["mp3", "ogg", "flac", "wav"]
mp3 = ["symphonia/mp3"]
ogg = ["symphonia/ogg", "symphonia/vorbis"]
flac = ["symphonia/flac"]
wav = ["symphonia/wav", "symphonia/pcm"]
