[package]
name = "kira"
version = "0.8.4"
authors = ["Andrew Minnich <aminnich3@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Expressive audio library for games"
repository = "https://github.com/tesselode/kira"
keywords = ["gamedev", "audio", "music"]
categories = ["game-development", "multimedia::audio"]
readme = "../../README.md"

[dependencies]
assert_no_alloc = { version = "1.1.2", optional = true }
atomic-arena = "0.1.0"
glam = { version = "0.24.0", features = ["mint"] }
mint = "0.5.9"
ringbuf = "0.3.1"
serde = { version = "1.0.164", features = ["derive"], optional = true }
symphonia = { version = "0.5.0", optional = true, default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.cpal]
version = "0.15.1"
optional = true

[target.'cfg(target_arch = "wasm32")'.dependencies.cpal]
version = "0.15.1"
optional = true
features = ["wasm-bindgen"]

[target.'cfg(target_os = "android")'.dependencies.cpal]
version = "0.15.1"
features = ["oboe-shared-stdcxx"]

[features]
default = ["cpal", "mp3", "ogg", "flac", "wav"]
mp3 = ["symphonia", "symphonia/mp3"]
ogg = ["symphonia", "symphonia/ogg", "symphonia/vorbis"]
flac = ["symphonia", "symphonia/flac"]
wav = ["symphonia", "symphonia/wav", "symphonia/pcm"]

[dev-dependencies]
approx = "0.5.1"

# docs.rs-specific configuration
[package.metadata.docs.rs]
# document all features
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]
